<resources>

    <!-- Generic -->
    <string name="alert_ok">Ok</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_thanks">Thanks</string>
    <string name="alert_error">Error</string>
    <string name="alert_warning">Warning</string>
    <string name="alert_next">Next</string>
    <string name="alert_done">Done</string>
    <string name="alert_close_app">Close app</string>

    <string name="app_name">MoodTracker</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">Mood Tracker</string>

    <string name="nav_header_title">tracking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_tab_tracking">TRACKING</string>
    <string name="title_tab_logbook">DIARY</string>

    <string name="title_activity_moodscopes">Moodscopes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Moodscopes -->
    <string name="moodscope_add_title">Add mood scope</string>
    <string name="moodscope_add_input_hint">Scope name</string>
    <string name="moodscope_add_input_error_empty">Empty input</string>
    <string name="moodscope_add_input_error_exists">Scope already exists</string>

    <!-- FirstStart -->
    <string name="first_start_welcome">Welcome to your mood tracker %1$s.</string>
    <string name="first_start_welcome_message">I wish you only the best and hope this helps a little :)</string>
    <string name="first_start_what_is_your_name">What is your name?</string>
    <string name="first_start_what_is_your_name_hint">Name</string>

    <!-- Log -->
    <string name="log_add_title">Positivity Entry</string>
    <string name="log_add_input_hint">Tell me something nice that happened to you today :)</string>
    <string name="log_add_input_error_empty">Empty input</string>

    <!-- Tracking -->
    <string name="tracking_title_average">Mood Average</string>
    <string name="tracking_title_sum">Mood Sum</string>
    <string name="tracking_wizard_title">Scope rating</string>
    <string name="tracking_summary">Summary</string>
    <string name="tracking_initialized_missed_days">Initialized %1$d missed days.</string>

    <!-- Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_tracking">Mood tracking</string>

    <string name="pref_general_display_name">Display name</string>

    <string name="pref_notification_enabled">Tracking Reminder</string>
    <string name="pref_notification_time">Notification time</string>

    <string name="pref_tracking_history_length">History length</string>
    <string-array name="pref_tracking_history_length_titles">
        <item>5 days</item>
        <item>10 days</item>
        <item>15 days</item>
        <item>20 days</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>6 months</item>
    </string-array>
    <string-array name="pref_tracking_history_length_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>150</item>
    </string-array>

    <string name="pref_tracking_method">Tracking method</string>
    <string-array name="pref_tracking_method_titles">
        <item>Rate all scopes at once</item>
        <item>Rate one scope at a time</item>
    </string-array>
    <string-array name="pref_tracking_method_values">
        <item>ALL_AT_ONCE</item>
        <item>ONE_AT_A_TIME</item>
    </string-array>

    <string name="pref_tracking_calculation">Chart calculation</string>
    <string-array name="pref_tracking_calculation_titles">
        <item>Show rating sum</item>
        <item>Calculate average rating</item>
    </string-array>
    <string-array name="pref_tracking_calculation_values">
        <item>SUM</item>
        <item>AVERAGE</item>
    </string-array>

    <!-- Notification -->
    <string name="notification_title">Mood Tracker</string>
    <string name="notification_message">Remember to track your mood</string>

    <!-- Share -->
    <string name="share_app_title">Share App</string>
    <string name="share_app_text">Mood tracker for android: </string>
    <string name="share_app_url">http://play.google.com/store/apps/details?id=com.techlung.moodtracker</string>

    <!-- IO -->
    <string name="io_export">Export</string>
    <string name="io_import">Import</string>
    <string-array name="io_db_format">
        <item>1. Mood ratings and scopes</item>
        <item>2. Diary entries</item>
    </string-array>
    <string name="io_export_fail">Export failed... Sorry :(</string>
    <string name="io_export_success">Export succeeded!</string>
    <string name="io_import_fail">Oh no... Import failed :(</string>
    <string name="io_import_success">Import succeeded!</string>

    <string name="io_import_delete_warning">All current entries will be deleted.</string>

</resources>
