<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.techlung.moodtracker.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.techlung.moodtracker.settings.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.techlung.moodtracker.settings.SettingsActivity$TrackingPreferenceFragment"
        android:icon="@drawable/ic_insert_chart"
        android:title="@string/pref_header_tracking" />

</preference-headers>
