<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="10"
        android:entries="@array/pref_tracking_history_length_titles"
        android:entryValues="@array/pref_tracking_history_length_values"
        android:key="TRACKING_HISTORY_LENGTH"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_tracking_history_length" />

    <ListPreference
        android:defaultValue="ONE_AT_A_TIME"
        android:entries="@array/pref_tracking_method_titles"
        android:entryValues="@array/pref_tracking_method_values"
        android:key="TRACKING_METHOD"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_tracking_method" />

    <ListPreference
        android:defaultValue="AVERAGE"
        android:entries="@array/pref_tracking_calculation_titles"
        android:entryValues="@array/pref_tracking_calculation_values"
        android:key="TRACKING_CALCULATION"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_tracking_calculation" />

</PreferenceScreen>
